--- a/PhedPay/appsettings.json
+++ b/PhedPay/appsettings.json
@@ -9,9 +9,38 @@
     "DefaultConnection": "Data Source=172.30.52.89;Initial Catalog=Phedpay;Integrated Security=False;MultipleActiveResultSets=True;User ID=AppDev;Password=AppDev@ph3d#123; TrustServerCertificate=True"
 
   },
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.Seq",
+      "Serilog.Sinks.File"
+    ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Information"
+      }
+    },
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "Seq",
+        "Args": { "ServerUrl": "http://seq:5341" }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/log-.txt",
+          "rollingInterval": "Day",
+          "retainedFileCountLimit": 31,
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
+  },
   "AllowedHosts": "*",
   "api_username": "phed",
   "apikey": "2E639809-58B0-49E2-99D7-38CB4DF2B5B20",
-  "baseAPI": "https://billing.phed.com.ng/dlenhanceapi/"
-
+  "baseAPI": "https://collections.phed.com.ng/dlenhanceapi/"
 }
