--- a/PhedPay/appsettings.json
+++ b/PhedPay/appsettings.json
@@ -42,5 +42,6 @@
   "AllowedHosts": "*",
   "api_username": "phed",
   "apikey": "2E639809-58B0-49E2-99D7-38CB4DF2B5B20",
-  "baseAPI": "https://collections.phed.com.ng/dlenhanceapi/"
+  "baseAPI": "https://collections.phed.com.ng/dlenhanceapi/",
+  "CALLBACK_URL": "https://dlenhanceuat.phed.com.ng/Payment/VerifyAndProcess"
 }
