--- a/PhedPay/appsettings.json
+++ b/PhedPay/appsettings.json
@@ -6,7 +6,10 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=172.30.52.89;Initial Catalog=Phedpay;Integrated Security=False;MultipleActiveResultSets=True;User ID=AppDev;Password=AppDev@ph3d#123; TrustServerCertificate=True"
+    "DefaultConnection": "Data Source=172.30.52.89;Initial Catalog=Phedpay;Integrated Security=False;MultipleActiveResultSets=True;User ID=AppDev;Password=AppDev@ph3d#123; TrustServerCertificate=True",
+    "DefaultDRConnection": "Data Source=(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=10.0.20.4)(PORT=1530))(CONNECT_DATA=(SERVICE_NAME=power)));User Id=ENSERV;Password=SNShuVL7v3y1G;Min Pool Size=10;Connection Lifetime=120;Connection Timeout=60;Incr Pool Size=5;Decr Pool Size=2;"
+
+
 
   },
   "Serilog": {
@@ -43,5 +46,5 @@
   "api_username": "phed",
   "apikey": "2E639809-58B0-49E2-99D7-38CB4DF2B5B20",
   "baseAPI": "https://collections.phed.com.ng/dlenhanceapi/",
-  "CALLBACK_URL": "https://localhost:7251/Payment/VerifyAndProcess" // "https://dlenhanceuat.phed.com.ng/Payment/VerifyAndProcess"
+  "CALLBACK_URL": "https://payments.phed.com.ng/payment/Requery?AccountNo=" //"https://localhost:7251/Payment/VerifyAndProcess" // "https://dlenhanceuat.phed.com.ng/Payment/VerifyAndProcess"
 }
