--- a/PhedPay/appsettings.json
+++ b/PhedPay/appsettings.json
@@ -42,6 +42,9 @@
     ],
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
   },
+  "GlobalPaySettings": {
+    "ApiKey": "JB4F7FKMLUU2IECI",
+  },
   "AllowedHosts": "*",
   "api_username": "phed",
   "apikey": "2E639809-58B0-49E2-99D7-38CB4DF2B5B20",
