--- a/PhedPay/appsettings.json
+++ b/PhedPay/appsettings.json
@@ -43,14 +43,14 @@
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
   },
   "GlobalPaySettings": {
-    "ApiKey": "JB4F7FKMLUU2IECI",
-    "url": "https://paygw.globalpay.com.ng/globalpay-paymentgateway/api/paymentgateway/generate-payment-link",
+    "ApiKey": "JB4F7FKMLUU2I ECI",
+    "url": "https://paygw.globalpay.com.ng/globalpay-paymentgateway/api/paymentgateway/generate-payment- link",
     "baseUrl": "https://paygw.globalpay.com.ng/globalpay-paymentgateway/api",
 
   },
   "AllowedHosts": "*",
   "api_username": "phed",
   "apikey": "2E639809-58B0-49E2-99D7-38CB4DF2B5B20",
-  "baseAPI": "https://collections.phed.com.ng/dlenhanceapi/",
-  "CALLBACK_URL": "https://payments.phed.com.ng/payment/Requery?AccountNo=", //"https://localhost:7251/Payment/VerifyAndProcess" // "https://dlenhanceuat.phed.com.ng/Payment/VerifyAndProcess"
+  "baseAPI": "https://collections.phed.ng/dlenhanceapi/",
+  "CALLBACK_URL": "https://payments.phed.ng/payment/Requery?AccountNo=", //"https://localhost:7251/Payment/VerifyAndProcess" // "https://dlenhanceuat.phed.ng/Payment/VerifyAndProcess"
 }
