--- a/PhedPay/appsettings.json
+++ b/PhedPay/appsettings.json
@@ -43,7 +43,7 @@
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
   },
   "GlobalPaySettings": {
-    "ApiKey": "JB4F7FKMLUU2IECI",
+    "ApiKey": "JB4F7FKMLUU2I ECI",
     "url": "https://paygw.globalpay.com.ng/globalpay-paymentgateway/api/paymentgateway/generate-payment- link",
     "baseUrl": "https://paygw.globalpay.com.ng/globalpay-paymentgateway/api"
 
@@ -53,5 +53,6 @@
   "apikey": "2E639809-58B0-49E2-99D7-38CB4DF2B5B20",
   //"baseAPI": "https://collections.phed.ng/dlenhanceapi/",
   "baseAPI": "https://processor.phed.com.ng/dlenhanceapi/",
-  "CALLBACK_URL": "https://payments.phed.ng/payment/Requery?AccountNo=" //"https://localhost:7251/Payment/VerifyAndProcess" // "https://dlenhanceuat.phed.ng/Payment/VerifyAndProcess"
+  //"CALLBACK_URL": "https://payments.phed.ng/payment/Requery?AccountNo=" //"https://localhost:7251/Payment/VerifyAndProcess" // "https://dlenhanceuat.phed.ng/Payment/VerifyAndProcess"
+  "CALLBACK_URL": "https://localhost:7251/payment/Requery?AccountNo="
 }
