Fully tested on live

--- a/PhedPay/appsettings.json
+++ b/PhedPay/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=172.30.52.89;Initial Catalog=Phedpayuat;Integrated Security=False;MultipleActiveResultSets=True;User ID=AppDev;Password=AppDev@ph3d#123; TrustServerCertificate=True",
+    "DefaultConnection": "Data Source=172.30.52.89;Initial Catalog=Phedpay;Integrated Security=False;MultipleActiveResultSets=True;User ID=AppDev;Password=AppDev@ph3d#123; TrustServerCertificate=True",
     "DefaultDRConnection": "Data Source=(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=10.0.20.4)(PORT=1530))(CONNECT_DATA=(SERVICE_NAME=power)));User Id=ENSERV;Password=SNShuVL7v3y1G;Min Pool Size=10;Connection Lifetime=120;Connection Timeout=60;Incr Pool Size=5;Decr Pool Size=2;"
 
 
